# cfe_module

./: CMakeLists.txt  README.md  package.xml  robotcapabilities.txt
config/: 2d_config.yaml  2d_frontier_exploration.yaml  frontier_costmap_params.yaml  navfn.yaml  robot_config.yaml
config/env/: blocks_stats.yaml  maze_stats.yaml  office_stats.yaml  warehouse_stats.yaml
data/: maze_near_MERGE.txt  office_near_MERGE.txt  warehouse_near_rrt.txt
data/OWN_bestruns/: blocks_near_MERGE.txt  blocks_near_run_1.txt  blocks_near_run_2.txt  blocks_near_run_3.txt  maze_near_run_1.txt  maze_near_run_2.txt  maze_near_run_3.txt  maze_near_run_4.txt  office_near_MERGE_1.txt  office_near_run_1.txt  office_near_run_2.txt  office_near_run_3.txt  warehouse_near_run.txt  warehouse_near_run_1_MERGED.txt  warehouse_near_run_2.txt  warehouse_near_run_3.txt  warehouse_near_run_4.txt  warehouse_near_run_5.txt
data/RRT_bestruns/: blocks_near_run_1.txt  blocks_near_run_2.txt  blocks_near_run_3.txt  maze_near_run_1.txt  maze_near_run_2.txt  maze_near_run_3.txt  office_near_rrt_4.txt  office_near_run_1.txt  office_near_run_2.txt  office_near_run_3.txt  warehouse_near_run_1.txt  warehouse_near_run_2.txt  warehouse_near_run_3.txt
data/with assigned and own/: robot_1.txt  robot_2.txt  robot_3.txt
include/fyp/: environment.h  frontierplanner.h  functions.h  robot.h
include/fyp_api/: GridManager.h  Planner.h  Visualisation.h  environment.h  functions.h  robot.h
launch/: 2d_exploration.launch  2d_single.launch  assigner.launch  exploration.launch  exploration_one.launch  exploration_two.launch  performance_evaluation.launch  single_garage.launch  two_mymaze.launch
launch/includes/: map_merge.launch  navigation.launch  robot_launch.xml
launch/includes/initconfig/: three_initposes.launch  two_initposes.launch
launch/includes/rviz_config/: three_config.rviz  two_config.rviz
launch/includes/worlds/: my_maze.world
msg/: centroid.msg  centroidArray.msg  distMetrics.msg
scripts/: testgoals.sh
src/: GridManager.cpp  Planner.cpp  Visualisation.cpp  assigner.cpp  environment.cpp  exploration_module.cpp  frontier_exploration.cpp  frontierplanner.cpp  functions.cpp  performance_evaluation.cpp  robot.cpp
